--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -76,13 +76,18 @@
         <!-- For example columns with settings: -->
         <div class="row">
             <div class="col s6 input-field">
-                <input type="checkbox" class="value" id="option1" />
-                <label for="option1" class="translate">option1</label>
+                <input type="checkbox" class="value" id="host" />
+                <label for="host" class="translate">Host Adresse</label>
             </div>
 
             <div class="col s6 input-field">
-                <input type="text" class="value" id="option2" />
-                <label for="option2" class="translate">option2</label>
+                <input type="number" min="1" max="65565" class="value" id="port" />
+                <label for="port" class="translate">Port</label>
+            </div>
+
+            <div class="col s6 input-field">
+                <input type="number" min="0" max="512" class="value" id="universe" />
+                <label for="universe" class="translate">DMX Universum</label>
             </div>
         </div>
 
