add creation of object to admin

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -18,6 +18,7 @@
     <script type="text/javascript" src="words.js"></script>
 
     <script type="text/javascript">
+        var fixtures = {};
         // This will be called by the admin adapter when the settings page loads
         function load(settings, onChange) {
             // example: select elements with id=key and class=value and insert value
@@ -41,6 +42,13 @@
             onChange(false);
             // reinitialize all the Materialize labels on the page if you are dynamically adding inputs:
             if (M) M.updateTextFields();
+
+            socket.emit('getObjectView', 'system', 'meta', {startkey: 'artnet2.meta.', endkey: 'artnet2.meta.\u9999', include_docs: true}, function (err, res) {
+                for (var i = res.rows.length - 1; i >= 0; i--) {
+                    var row = res.rows[i];
+                    fixtures[row.id] = row.value;
+                }
+            });
         }
 
         // This will be called by the admin adapter when the user presses the save button
@@ -57,6 +65,52 @@
             });
             callback(obj);
         }
+
+        function generateDeviceStates(fixture, deviceId, deviceName, firstAddress) {
+            let states = JSON.parse(JSON.stringify(fixture.native.states));
+            for (let state of states) {
+                // get type of state
+                let dpType = states[i].common.role.split('.').pop();
+                state._id = deviceId + '.' + dpType;
+                state.parent = deviceId;
+                state.common_name = deviceName ? deviceName + ' ' + dpType : state._id;
+                state.native.channel = firstAddress++;
+            }
+            return states;
+        }
+        function generateDeviceObject(fixture, deviceName, firstAddress) {
+            let deviceObj = JSON.parse(JSON.stringify(fixture.native.channel));
+            deviceObj._id = 'artnet2.' + instance + '.' + fixture._id.split('.').pop() + '.' + firstAddress;
+            deviceObj.common.name     = deviceName || deviceId;
+            deviceObj.native.address  = firstAddress;
+            deviceObj.native.length   = fixture.native.length;
+            return deviceObj;
+        }
+        function createDevice(fixtureId, deviceName, firstAddress) {
+            fixture = fixtures[fixtureId];
+            deviceObject = generateDeviceObject(fixture, deviceName, firstAddress);
+            states = generateDeviceState(fixture, deviceObject._id, deviceName, firstAddress);
+            states.push(deviceObject);
+            return states;
+        }
+        function backendInsertObj(_objs) {
+            if (!_objs || !_objs.length) {
+                console.log('done ' + deviceId);
+            } else {
+                var obj = _objs.pop();
+                console.log('Add ' + obj._id);
+                socket.emit('setObject', obj._id, obj, function () {
+                        insertObjs(_objs);
+                        });
+            }
+        }
+        function createAndStoreDevice(fixtureId) {
+            deviceName = "Test";
+            firstAddress = 1;
+            device = createDevice(fixtureId, deviceName, firstAddress);
+            backendInsertObj([device]);
+        }
+        
     </script>
 
 </head>
