--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -130,7 +130,7 @@
         <!-- For example columns with settings: -->
         <div class="row">
             <div class="col s6 input-field">
-                <input type="checkbox" class="value" id="host" />
+                <input type="text" class="value" id="host" />
                 <label for="host" class="translate">Host Adresse</label>
             </div>
 
