fix name of backendInsertObjs

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -93,7 +93,7 @@
             states.push(deviceObject);
             return states;
         }
-        function backendInsertObj(_objs) {
+        function backendInsertObjs(_objs) {
             if (!_objs || !_objs.length) {
                 console.log('done ' + deviceId);
             } else {
