--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -95,7 +95,7 @@
         }
         function backendInsertObjs(_objs) {
             if (!_objs || !_objs.length) {
-                console.log('done ' + deviceId);
+                console.log('done storing devices');
             } else {
                 var obj = _objs.pop();
                 console.log('Add ' + obj._id);
