move javascript to it's own file

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -16,102 +16,9 @@
     <!-- Load our own files -->
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script type="text/javascript" src="words.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 
     <script type="text/javascript">
-        var fixtures = {};
-        // This will be called by the admin adapter when the settings page loads
-        function load(settings, onChange) {
-            // example: select elements with id=key and class=value and insert value
-            if (!settings) return;
-            $('.value').each(function () {
-                var $key = $(this);
-                var id = $key.attr('id');
-                if ($key.attr('type') === 'checkbox') {
-                    // do not call onChange direct, because onChange could expect some arguments
-                    $key.prop('checked', settings[id])
-                        .on('change', () => onChange())
-                        ;
-                } else {
-                    // do not call onChange direct, because onChange could expect some arguments
-                    $key.val(settings[id])
-                        .on('change', () => onChange())
-                        .on('keyup', () => onChange())
-                        ;
-                }
-            });
-            onChange(false);
-            // reinitialize all the Materialize labels on the page if you are dynamically adding inputs:
-            if (M) M.updateTextFields();
-
-            socket.emit('getObjectView', 'system', 'meta', {startkey: 'artnet2.meta.', endkey: 'artnet2.meta.\u9999', include_docs: true}, function (err, res) {
-                for (var i = res.rows.length - 1; i >= 0; i--) {
-                    var row = res.rows[i];
-                    fixtures[row.id] = row.value;
-                }
-            });
-        }
-
-        // This will be called by the admin adapter when the user presses the save button
-        function save(callback) {
-            // example: select elements with class=value and build settings object
-            var obj = {};
-            $('.value').each(function () {
-                var $this = $(this);
-                if ($this.attr('type') === 'checkbox') {
-                    obj[$this.attr('id')] = $this.prop('checked');
-                } else {
-                    obj[$this.attr('id')] = $this.val();
-                }
-            });
-            callback(obj);
-        }
-
-        function generateDeviceStates(fixture, deviceId, deviceName, firstAddress) {
-            let states = JSON.parse(JSON.stringify(fixture.native.states));
-            for (let state of states) {
-                // get type of state
-                let dpType = state.common.role.split('.').pop();
-                state._id = deviceId + '.' + dpType;
-                state.parent = deviceId;
-                state.common_name = deviceName ? deviceName + ' ' + dpType : state._id;
-                if ("channel" in state.native) {
-                    state.native.channel = firstAddress++;
-                }
-            }
-            return states;
-        }
-        function generateDeviceObject(fixture, deviceName, firstAddress) {
-            let deviceObj = JSON.parse(JSON.stringify(fixture.native.channel));
-            deviceObj._id = 'artnet2.' + instance + '.' + fixture._id.split('.').pop() + '.' + firstAddress;
-            deviceObj.common.name     = deviceName || deviceId;
-            deviceObj.native.address  = firstAddress;
-            deviceObj.native.length   = fixture.native.length;
-            return deviceObj;
-        }
-        function createDevice(fixtureId, deviceName, firstAddress) {
-            fixture = fixtures[fixtureId];
-            deviceObject = generateDeviceObject(fixture, deviceName, firstAddress);
-            states = generateDeviceStates(fixture, deviceObject._id, deviceName, firstAddress);
-            states.push(deviceObject);
-            return states;
-        }
-        function backendInsertObjs(_objs) {
-            if (!_objs || !_objs.length) {
-                console.log('done storing devices');
-            } else {
-                var obj = _objs.pop();
-                console.log('Add ' + obj._id);
-                socket.emit('setObject', obj._id, obj, function () {
-                        backendInsertObjs(_objs);
-                        });
-            }
-        }
-        function createAndStoreDevice(fixtureId) {
-            deviceName = "Test";
-            firstAddress = 1;
-            device = createDevice(fixtureId, deviceName, firstAddress);
-            backendInsertObjs(device);
-        }
         
     </script>
 
@@ -147,6 +54,45 @@
             </div>
         </div>
 
+    </div>
+    <div class="m material-dialogs">
+        <div id="dialog-fixture" class="modal modal-fixed-footer">
+            <div class="modal-content">
+                <div class="row">
+                    <div class="col s12">
+                        <h6 class="translate">add fixture</h6>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        <input id="artnet_add_device_name" type="text">
+                        <label class="translate" for="name">Name</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        <select id="artnet_add_device_fixture"></select>
+                        <label class="translate" for="fixture">Fixture</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        <input id="artnet_add_device_fixture-count" type="number"/>
+                        <label class="translate" for="fixture-count">Count</label>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col s12">
+                        <input id="artnet_add_device_first-address" type="number"/>
+                        <label class="translate" for="first-address">First address</label>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <a class="modal-action modal-close waves-effect waves-green btn-flat translate" id="artnet_add_device">add device</a>
+                <a class="modal-action modal-close waves-effect waves-green btn-flat translate" id="cancel_device">Cancel</a>
+            </div>
+        </div>
     </div>
 
 </body>
