--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -53,6 +53,14 @@
                 <label for="universe" class="translate">DMX Universum</label>
             </div>
         </div>
+        <div class="row">
+            <div class="col s1">
+                <a class="btn-floating btn-large waves-effect waves-light blue" id="show_artnet_add"><i class="material-icons">add</i></a>
+            </div>
+            <div class="col s11">
+                <p class="translate">help</p>
+            </div>
+        </div>
 
     </div>
     <div class="m material-dialogs">
