add feedback when adding fixtures implements #3

--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -61,6 +61,8 @@
                 <p class="translate">help</p>
             </div>
         </div>
+        <div class="row" id="messages">
+        </div>
 
     </div>
     <div class="m material-dialogs">
