--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -53,6 +53,11 @@
             </div>
         </div>
         <div class="row">
+            <div class="col s12">
+                <h3>Add Devices</h3>
+            </div>
+        </div>
+        <div class="row">
             <div class="col s1">
                 <a class="btn-floating btn-large waves-effect waves-light blue" id="show_artnet_add"><i class="material-icons">add</i></a>
             </div>
