--- a/admin/index_m.html
+++ b/admin/index_m.html
@@ -39,27 +39,27 @@
         <div class="row">
             <div class="col s6 input-field">
                 <input type="text" class="value" id="host" />
-                <label for="host" class="translate">Host Adresse</label>
+                <label for="host" class="translate">host</label>
             </div>
 
             <div class="col s6 input-field">
                 <input type="number" min="1" max="65565" class="value" id="port" />
-                <label for="port" class="translate">Port</label>
+                <label for="port" class="translate">port</label>
             </div>
 
             <div class="col s6 input-field">
                 <input type="number" min="0" max="512" class="value" id="universe" />
-                <label for="universe" class="translate">DMX Universum</label>
+                <label for="universe" class="translate">universe</label>
             </div>
         </div>
         <div class="row">
             <div class="col s12">
-                <h6>Add Devices</h3>
+                <h6 class="translate">add fixture</h3>
             </div>
         </div>
         <div class="row">
             <div class="col s1">
-                <a class="btn-floating btn-large waves-effect waves-light blue" id="show_artnet_add"><i class="material-icons">add</i></a>
+                <a class="btn-floating btn-large waves-effect waves-light blue" id="show_artnet_add"><i class="material-icons" class="translate">add</i></a>
             </div>
             <div class="col s11">
                 <p class="translate">help</p>
